[package]
name = "sluss"
version = "0.2.0"
edition = "2021"
authors = ["Fredrik Bränström"]
description = "Unified router management CLI"
license = "MIT"
repository = "https://github.com/semikolon/sluss"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime (for SSH, HTTP)
tokio = { version = "1", features = ["full", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for LLM API)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Web server (dashboard UI)
axum = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.32"

# Hostname detection
hostname = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File utilities
dirs = "5"

# IP address parsing
ipnetwork = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
